# file-archiver

./: .dockerignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  manage.py  pyproject.toml
api/: urls.py
authn/: urls.py  views.py
conf/: api.nginx.conf  web.nginx.conf
docker/: Dockerfile.api  Dockerfile.web  docker-compose.prod.yaml
filearchiver/: asgi.py  settings.py  urls.py  wsgi.py
web/: README.md  components.json  eslint.config.js  package.json  vite.config.ts
web/src/: App.tsx  main.css  main.tsx  routeTree.gen.ts  router.tsx  vite-env.d.ts
web/src/components/ui/: button.tsx
web/src/context/AuthContext/: AuthContext.tsx  context.tsx
web/src/routes/: __root.tsx  _authenticated.tsx  login.tsx
web/src/routes/_authenticated/: index.tsx
